[package]
name = "stm32f103c8tx-ad8232-data-transfer-rs"
version = "0.1.0"
authors = ["Joker2770 <1214220480@qq.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
nb = "1.1.0"
unwrap-infallible = "0.1.5"
rtt-target = "0.5.0"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["stm32f103", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
